deleted forum modal div from archive

--- a/courses/templates/subject/form_view_teacher.html
+++ b/courses/templates/subject/form_view_teacher.html
@@ -74,7 +74,7 @@
                   <div class="dropdown">
                     <a href="#" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-plus-circle fa-lg" aria-hidden="true"></i></a>
                     <ul class="dropdown-menu" aria-labelledby="dLabel">
-                      <li><a href="javascript:createFforum('{% url 'course:forum:create' %}', '{{ topic.id }}')">{% trans 'Create Forum' %}<div class="ripple-container"><div class="ripple ripple-on ripple-out" style="left: 33.5312px; top: 11px; background-color: rgb(0, 150, 136); transform: scale(20);"></div></div></a></li>
+                      <li><a href="javascript:createForum('{% url 'course:forum:create' %}', '{{ topic.id }}')">{% trans 'Create Forum' %}<div class="ripple-container"><div class="ripple ripple-on ripple-out" style="left: 33.5312px; top: 11px; background-color: rgb(0, 150, 136); transform: scale(20);"></div></div></a></li>
                     </ul>
                   </div>
                 </div>
@@ -301,7 +301,7 @@
     <!-- EndModal -->
 
     <!-- MODAL ACTIVITIES-->
-    <div class="modal fade" id="ActivityModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+   <div class="modal fade" id="ActivityModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
@@ -362,136 +362,7 @@
     </div>
     <!--EndModal-->
 
-    <!-- MODAL FORUM -->
-    <div class="modal fade" id="forumModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h4 class="modal-title" id="myModalLabel">Forum</h4>
-          </div>
-          <div class="modal-body">
-            <!--Forum-->
-            <!--Main wrapper-->
-            <div class="comments-list">
-              <div class="section-heading">
-                  <h1>Python</h1>
-                  <h4><b>Description:</b>High-level Language</h4>
-                  <h4><b>Opened in:</b> September 1st</h4>
-              </div>
-              <!--First row-->
-              <div class="row">
 
-                  <!--Content column-->
-                  <div class="col-sm-10 col-xs-12">
-                      <h3 class="user-name">Gerson Jefferson</h3>
-
-                      <div class="card-data">
-                         <p class="comment-date"><i class="fa fa-clock-o"></i> 05/10/2015</p>
-                      </div>
-
-                      <p class="comment-text">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-                          cupidatat non proident.</p>
-                  </div>
-                  <!--/.Content column-->
-              </div>
-              <a class="btn btn-sm" style="float: right;" data-toggle="collapse" href="#collapse1" aria-expanded="false" aria-controls="collapseExample">Reply</a>
-              <div class="collapse" id="collapse1">
-                <div class="md-form">
-                    <div class="form-group is-empty"><input type="text" id="form1" class="form-control" placeholder="comment on the cometary"></div><span class="input-group-btn">
-                        <button type="button" class="btn btn-sm">
-                          <i class="fa fa-paper-plane"> Send</i>
-                        </button>
-                      </span>
-                </div>
-              </div>
-            </div>
-
-                <!--/.First row-->
-
-                <!--Second row-->
-                <div class="row">
-
-                    <!--Content column-->
-                    <div class="col-sm-10 col-xs-12">
-                        <h3 class="user-name">Cherielly</h3>
-
-                        <div class="card-data">
-                          <p class="comment-date"><i class="fa fa-clock-o"></i> 08/10/2015</p>
-                        </div>
-
-                        <p class="comment-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam
-                            voluptatem quia voluptas sit aspernatur.</p>
-                    </div>
-                    <!--/.Content column-->
-                </div>
-                      <a class="btn btn-sm" style="float: right;" data-toggle="collapse" href="#collapse2" aria-expanded="false" aria-controls="collapseExample">Reply</a>
-                      <div class="collapse" id="collapse2">
-                        <div class="md-form">
-                            <div class="form-group is-empty"><input type="text" id="form1" class="form-control" placeholder="comment on the cometary"></div><span class="input-group-btn">
-                                <button type="button" class="btn btn-sm">
-                                  <i class="fa fa-paper-plane"> Send</i>
-                                </button>
-                              </span>
-                        </div>
-                      </div>
-
-
-                <!--/.Second row-->
-
-                <!--Third row-->
-                <div class="row">
-
-
-                   <!--Content column-->
-                    <div class="col-sm-10 col-xs-12">
-                        <h3 class="user-name">Gemozecleia</h3>
-
-                        <div class="card-data">
-                          <p class="comment-date"><i class="fa fa-clock-o"></i> 17/10/2015
-                        </p></div>
-
-                        <p class="comment-text">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa
-                            qui officia.
-                        </p>
-                    </div>
-                    <!--/.Content column-->
-
-                </div>
-                <a class="btn btn-sm" style="float: right;" data-toggle="collapse" href="#collapse3" aria-expanded="false" aria-controls="collapseExample">Reply</a>
-                      <div class="collapse" id="collapse3">
-                        <div class="md-form">
-                            <div class="form-group is-empty"><input type="text" id="form1" class="form-control" placeholder="comment on the cometary"></div><span class="input-group-btn">
-                                <button type="button" class="btn btn-sm">
-                                  <i class="fa fa-paper-plane"> Send</i>
-                                </button>
-                              </span>
-                        </div>
-                      </div>
-
-                <!--/.Third row-->
-                <div class="row">
-                  <div class="form-group is-empty">
-                  <div class="col-sm-10 col-xs-12">
-                    <input type="text" id="addon3a" class="form-control" placeholder="Add Comment">
-
-                      <span class="input-group-btn">
-                        <button type="button" class="btn btn-fab btn-fab-mini">
-                          <i class="material-icons">send</i>
-                        </button>
-                      </span>
-                  </div>
-                </div>
-              </div>
-
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!--EndForumModal-->
 
     <!-- MODAL LINK EDIT-->
     {% if user|has_role:'system_admin' or topic.owner == user%}
