refatoração nas permições nos templates

--- a/courses/templates/course/index.html
+++ b/courses/templates/course/index.html
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-{% if user|has_role:'professor, system_admin' %}
+{% if user|has_role:'professor' or user|has_role:'system_admin' %}
 
     <div class="panel panel-primary navigation">
 	    <div class="panel-heading">
@@ -76,7 +76,7 @@
 		        <i class="material-icons">search</i>
 		      </button>
 		    </span>
-		</div>	
+		</div>
 	</form>
 </div>
 	<div class="col-md-12">
@@ -103,7 +103,7 @@
 						          <h4 style="color:white">{{course.name}}</h4>
 						          </a>
 						        </div>
-						        {% if user|has_role:'professor, system_admin' %}
+						        {% if user|has_role:'professor' or user|has_role:'system_admin' %}
 							        <div class="col-xs-4 col-md-3" id="divMoreActions">
 							            <div class="btn-group">
 							              <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -150,7 +150,7 @@
 						          <h4 style="color:white">{{course.name}}</h4>
 						          </a>
 						        </div>
-						        {% if user|has_role:'professor, system_admin' %}
+						        {% if user|has_role:'professor' or user|has_role:'system_admin' %}
 							        <div class="col-xs-4 col-md-3" id="divMoreActions">
 							            <div class="btn-group">
 							              <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
