--- a/courses/templates/topic/index.html
+++ b/courses/templates/topic/index.html
@@ -1,13 +1,14 @@
 {% extends 'base.html' %}
 
-{% load static i18n permission_tags %}
+{% load static i18n permission_tags professor_access %}
 
 {% block breadcrumbs %}
 
 	<ol class="breadcrumb">
 	  	<li><a href="{% url 'app:index' %}">{% trans 'Home' %}</a></li>
 	  	<li><a href="{% url 'course:view_subject' subject.slug %}">{{ subject }}</a></li>
-	  	{% if user|has_role:'professor' or user|has_role:'system_admin' %}
+			{% professor_subject subject user as maneger_topic%}
+			{% if maneger_topic %}
 	  		<li class="active">{% trans 'Manage Topic' %}</li>
 	  	{% else %}
 	  		<li class="active">{{ topic.name }}</li>
@@ -54,7 +55,8 @@
 	        <h3>{{subject}}</h3>
 	      </div>
 	      <div class="col-xs-4 col-md-2 divMoreActions">
-          {% if user|has_role:'system_admin' or user in subject.professors %}
+					{% professor_subject subject user as permissions%}
+          {% if permissions %}
             <div class="btn-group">
               <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
@@ -105,7 +107,8 @@
                       <div class="col-md-4">
                        <i class="fa fa-file-archive-o fa-lg" aria-hidden="true">Atividade.doc</i>
                      </div>
-                     {% if user|has_role:'professor, system_admin' %}
+										 {% professor_subject subject user as permi_test%}
+                     {% if permi_test %}
                         <div class="col-md-4">
                           <label> Nota:</label>
                           <input type="number" step="0.01">
