--- a/courses/templates/category/update.html
+++ b/courses/templates/category/update.html
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-{% if user|has_role:'professor, system_admin' %}
+{% if user|has_role:'professor' or user|has_role:'system_admin' %}
 
     <div class="panel panel-primary navigation">
 	    <div class="panel-heading">
@@ -87,7 +87,7 @@
 					{% endif %}
 				{% endfor %}
 				<div class="row text-center">
-					<input type="submit" value="{% trans 'Save' %}" class="btn btn-sm btn-success" />	
+					<input type="submit" value="{% trans 'Save' %}" class="btn btn-sm btn-success" />
 				</div>
 			</form>
 		</div>
