--- a/courses/templates/subject/form_view_teacher.html
+++ b/courses/templates/subject/form_view_teacher.html
@@ -1,4 +1,4 @@
-    {% load static i18n list_topic_foruns permission_tags widget_tweaks %}
+    {% load static i18n list_topic_foruns permission_tags widget_tweaks professor_access%}
 
     {% block javascript %}
         <script type="text/javascript" src="{% static 'js/forum.js' %}"></script>
@@ -24,7 +24,8 @@
               <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
               </button>
-              {% if user|has_role:'system_admin' or topic.owner == user %}
+              {% professor_subject topic.subject user as dropdown_topic %}
+              {% if dropdown_topic %}
                   <ul class="dropdown-menu pull-right" aria-labelledby="moreActions">
                   <li><a href="javascript:void(0)" data-toggle="modal" data-target="#myModal4"><i class="fa fa-files-o fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Replicate" %}</a></li>
                     <li><a href="javascript:void(0)" class="edit_card"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; {% trans "Edit" %}</a></li>
@@ -61,7 +62,7 @@
                     {% for file in files %}
                       <li><i class="fa fa-book" aria-hidden="true"></i> <a href="{{file.file_url}}">{{file}}</a></li>
                     {% endfor %}
-                    
+
                    <!-- <li><i class="fa fa-link" aria-hidden="true"></i>  <a href="#" data-toggle="modal" data-target="#linksModal">Link 1</a></li>
                     <li><i class="fa fa-file-code-o" aria-hidden="true"></i> <a href="#" data-toggle="modal" data-target="#embedModal">EMBED Material</a></li>-->
                 </ul>
@@ -129,6 +130,7 @@
                     <a href="#" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-plus-circle fa-lg" aria-hidden="true"></i></a>
                     <ul class="dropdown-menu" aria-labelledby="dLabel">
                       <li>Qualquer coisa</li>
+                      <li><i class="material-icons">poll</i> <a href="javascript:modal.get('{% url 'course:poll:create_poll' topic.slug%}','#poll','#modal_poll');">{% trans 'Create Poll' %}</a></li>
                     </ul>
                   </div>
                 </div>
@@ -190,8 +192,8 @@
             </div>
         </div>
     </div>
-
-{% if user|has_role:'system_admin' or topic.owner == user%}
+{% professor_subject topic.subject user as professor_topic %}
+{% if professor_topic %}
     {% include "files/create_file.html" %}
 {% endif %}
     <!-- MODAL REMOVE FILE -->
@@ -240,12 +242,9 @@
       </div>
     </div>
     <!-- EndModal -->
-
-    {% if user|has_role:'system_admin' or topic.owner == user%}
+    {% professor_subject topic.subject user as professor_links %}
+    {% if professor_links%}
         {% include "links/create_link.html" %}
-    {% endif %}
-
-    {% if user|has_role:'system_admin' or topic.owner == user%}
         {% include "links/delete_link.html" %}
     {% endif %}
 
@@ -365,7 +364,8 @@
 
 
     <!-- MODAL LINK EDIT-->
-    {% if user|has_role:'system_admin' or topic.owner == user%}
+    {% professor_subject topic.subject user as links_update %}
+    {% if links_update%}
         {% include "links/update_link.html" %}
     {% endif %}
 
