--- a/courses/templates/subject/poll_item_actions.html
+++ b/courses/templates/subject/poll_item_actions.html
@@ -1,18 +1,17 @@
-{% load static i18n permission_tags%}
+{% load static i18n permission_tags professor_access %}
 
 <script src="{% static 'js/modals_requisitions.js'%}"></script>
 <script src="{% static 'js/modal_poll.js'%}"></script>
 
-{% if request.user|has_role:'professor, system_admin'%}
 {% for poll in polls %}
-  <li id="poll_{{poll.slug}}"><i class="material-icons">poll</i> <a href="javascript:get('{% url 'course:poll:update_poll' poll.slug %}','#poll','#modal_poll');">{{ poll.name }}</a><a href="javascript:get('{% url 'course:poll:delete_poll' poll.slug %}','#poll','#modal_poll');"><span class="glyphicon glyphicon-remove"></span></a></li>
-{% endfor %}
-<button class="btn btn-primary btn-raised" onclick="javascript:get('{% url 'course:poll:create_poll' topic.slug%}','#poll','#modal_poll');">{% trans '+ Create Poll' %}</button>
-{% else %}
-{% for poll in polls %}
-  <li id="poll_{{poll.slug}}"><i class="material-icons">poll</i> <a href="javascript:get('{% url 'course:poll:view_poll' poll.slug %}','#poll','#modal_poll');">{{ poll.name }}</a></li>
-{% endfor %}
-{% endif %}
+  {% professor_subject poll.topic.subject request.user as permission%}
+  {% if permission %}
+    <li id="poll_{{poll.slug}}"><i class="material-icons">poll</i> <a href="javascript:modal.get('{% url 'course:poll:update_poll' poll.slug %}','#poll','#modal_poll');">{{ poll.name }}</a><a href="javascript:modal.get('{% url 'course:poll:delete_poll' poll.slug %}','#poll','#modal_poll');"><span class="glyphicon glyphicon-remove"></span></a></li>
+  {% else %}
+    <li id="poll_{{poll.slug}}"><i class="material-icons">poll</i> <a href="javascript:modal.get('{% url 'course:poll:view_poll' poll.slug %}','#poll','#modal_poll');">{{ poll.name }}</a></li>
+  {% endif %}
+  {% endfor %}
+{# <button class="btn btn-primary btn-raised" onclick="javascript:modal.get('{% url 'course:poll:create_poll' topic.slug%}','#poll','#modal_poll');">{% trans '+ Create Poll' %}</button> #}
 <div class="row" id="modal_poll">
 
 </div>
