--- a/courses/templates/subject/form_view_teacher.html
+++ b/courses/templates/subject/form_view_teacher.html
@@ -2,6 +2,7 @@
 
     {% block javascript %}
         <script type="text/javascript" src="{% static 'js/forum.js' %}"></script>
+        <script src="{% static 'js/file.js' %}"></script>
     {% endblock %}
 
     <div class="panel-group accordion ui-accordion ui-widget ui-helper-reset ui-sortable" role="tablist" aria-multiselectable="false">
@@ -51,13 +52,21 @@
                   <div class="dropdown">
                     <a href="#" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-plus-circle fa-lg" aria-hidden="true"></i></a>
                     <ul class="dropdown-menu" aria-labelledby="dLabel">
-                      <li><a href="javascript:void(0)" data-toggle="modal" data-target="#createLinksModal">Create a Link<div class="ripple-container"><div class="ripple ripple-on ripple-out" style="left: 54.5312px; top: 22px; background-color: rgb(0, 150, 136); transform: scale(20);"></div></div></a></li>
-                      <li><a href="javascript:void(0)" data-toggle="modal" data-target="#createFileModal">Create a file<div class="ripple-container"><div class="ripple ripple-on ripple-out" style="left: 33.5312px; top: 11px; background-color: rgb(0, 150, 136); transform: scale(20);"></div></div></a></li>
+                        <li><a href="javascript:void(0)" data-toggle="modal" data-target="#createLinksModal">Create a Link<div class="ripple-container"><div class="ripple ripple-on ripple-out" style="left: 54.5312px; top: 22px; background-color: rgb(0, 150, 136); transform: scale(20);"></div></div></a></li>
+                        <li>
+                            <a href="javascript:get_modal_file('{% url 'course:file:create_file' topic.slug %}', '#fileModal', '#divModalFile')">
+                                Create a file
+                                <div class="ripple-container">
+                                    <div class="ripple ripple-on ripple-out" style="left: 33.5312px; top: 11px; background-color: rgb(0, 150, 136); transform: scale(20);">
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
                     </ul>
                   </div>
                 </div>
                 <ul>
-                    <li><i class="fa fa-book" aria-hidden="true"></i> <a href="#">Book 1</a></li>
+                    {% list_topic_file request topic %}
                     <li><i class="fa fa-link" aria-hidden="true"></i>  <a href="#" data-toggle="modal" data-target="#linksModal">Link 1</a></li>
                     <li><i class="fa fa-file-code-o" aria-hidden="true"></i> <a href="#" data-toggle="modal" data-target="#embedModal">EMBED Material</a></li>
                 </ul>
@@ -108,17 +117,12 @@
                     <a href="#" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-plus-circle fa-lg" aria-hidden="true"></i></a>
                     <ul class="dropdown-menu" aria-labelledby="dLabel">
                       <li><a href="javascript:void(0)" data-toggle="modal" data-target="#createLinksModal">Create a Link</a></li>
-                      <li><a href="javascript:void(0)" data-toggle="modal" data-target="#createFileModal">Create a file</a></li>
+                      <li><a href="javascript:void(0)" data-toggle="modal" data-target="#fileModal">Create a file</a></li>
                     </ul>
                   </div>
                 </div>
                 <ul>
-                    <li class="icon_edit_remove"> <a href="#" data-toggle="modal" data-target="#editFileModal"><i class="fa fa-pencil fa-lg" aria-hidden="true"></i></a>  <a href="#" data-toggle="modal" data-target="#removeFileModal"><i class="fa fa-trash fa-lg" aria-hidden="true"></i></a></li>
-                    <li><a href="#">Book 1</a> </li>
-                    <li class="icon_edit_remove"> <a href="#" data-toggle="modal" data-target="#linksModalEdit"><i class="fa fa-pencil fa-lg" aria-hidden="true"></i></a>  <a href="#" data-toggle="modal" data-target="#removeLink"><i class="fa fa-trash fa-lg" aria-hidden="true"></i></a></li>
-                    <li><a href="#" data-toggle="modal" data-target="#linksModal">Link 1</a></li>
-                    <li class="icon_edit_remove"><i class="fa fa-pencil fa-lg" aria-hidden="true"></i>  <i class="fa fa-trash fa-lg" aria-hidden="true"></i></li>
-                    <li><a href="#" data-toggle="modal" data-target="#embedModal">EMBED Material</a></li>
+                    {% list_topic_file_edit request topic %}
                 </ul>
               </div>
               <div class="col-xs-4 col-md-offset-1 col-md-4">
@@ -172,86 +176,6 @@
       </div>
     </div>
     <!-- END -->
-
-    <!-- MODAL EDIT FILE -->
-    <div class="modal fade" id="editFileModal" tabindex="-1" role="dialog" aria-labelledby="editFileLabel">
-    <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-        <h4 class="modal-title" id="editFileLabel">Add File</h4>
-      </div>
-      <div class="modal-body">
-        <!-- Card -->
-
-                <form class="form-horizontal">
-                  <fieldset>
-
-                      <div class="form-group">
-                        <label for="inputName" class="col-md-2 control-label">Name</label>
-
-                        <div class="col-md-10">
-                          <input type="text" class="form-control" id="inputText" placeholder="Name" value="Book 1">
-                        </div>
-                      </div>
-
-                      <div class="form-group is-empty is-fileinput">
-                        <label for="inputFile" class="col-md-2 control-label">File</label>
-
-                        <div class="col-md-10">
-                          <input type="text" readonly="" class="form-control" placeholder="Browse...">
-                          <input type="file" id="inputFile" multiple="">
-                        </div>
-                      </div>
-
-
-                      <div class="form-group">
-                        <div class="col-md-12 text-center">
-                          <p><b>The file size shouldn't exceed 10MB</b></p>
-                        </div>
-                      </div>
-
-                      <div class="form-group">
-                        <div class="col-md-12">
-                          <a href="javascript:void(0)" class="btn btn-raised btn-default">Cancel</a>
-                          <a href="javascript:void(0)" class="btn btn-raised btn-primary">Submit</a>
-                        </div>
-                      </div>
-                    </fieldset>
-                  </form>
-
-
-            <!-- .end Card -->
-          </div>
-        </div>
-      </div>
-    </div>
-
-{% if user|has_role:'system_admin' or topic.owner == user%}
-    {% include "files/create_file.html" %}
-{% endif %}
-
-    <!-- MODAL REMOVE FILE -->
-    <div class="modal" id="removeFileModal">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">X</button>
-            <h4 class="modal-title"></h4>
-          </div>
-          <div class="modal-body">
-            <p>Do you really want to delete this file?</p>
-          </div>
-          <div class="modal-footer">
-
-            <a href="#" target="_self"><button type="button" class="btn btn-primary" data-dismiss="modal" aria-hidden="true">Confirm</button></a>
-
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- END -->
-
     <!--MODAL VIEW LINK-->
     <div class="modal fade" id="linksModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
       <div class="modal-dialog" role="document">
