Block script to file #132

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -116,6 +116,9 @@
 	</div>
 	<script src="{% static 'js/main.js' %}"></script>
 	<script type="text/javascript" src="{% static 'js/topic_editation_presentation.js' %}"></script>
+	{% block script_file %}
+		
+	{% endblock script_file %}
 </body>
 
 </html>
