centralized login form on login page #209

--- a/core/static/css/base/amadeus.css
+++ b/core/static/css/base/amadeus.css
@@ -338,3 +338,10 @@ ul, li {
 .icon_edit_remove{
   float: right;
 }
+
+
+/* core/index.html classes*/
+
+.logo-login{
+  margin-top: 15px;
+  margin-bottom: 15px;
