resized and centralized register user form #208

--- a/core/templates/register_user.html
+++ b/core/templates/register_user.html
@@ -18,14 +18,16 @@
             </div>
         {% endfor %}
     {% endif %}
-	<div class="row logo-row">
-        <div class="col-lg-offset-2 col-lg-9">
+	<div class="row">
+        <div class="col-lg-offset-2 col-lg-8 col-md-offset-2 col-md-8 col-xs-offset-2 col-xs-8 col-sm-offset-2 col-sm-8">
+        	<div class="col-lg-8 col-md-8 col-xs-8 col-sm-8">
             <img src="{% static 'img/amadeus.png' %}" class="img-responsive center-block " alt="logo amadeus" id="logo">
+        	</div>
         </div>
     </div>
 
 	<div class="row">
-		<div class="">
+		<div class="col-lg-8 col-lg-offset-1 col-md-8 col-md-offset-1 col-sm-8 col-sm-offset-1 col-xs-8 col-xs-offset-1">
 			<div class="card">
 				<div class="card-content">
 					<div class="card-body">
