--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -64,7 +64,7 @@
                   {# </div> #}
                   {# <div class="row"> #}
                     <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
-                        <button type="button" class="btn btn-flat" formaction="#" style="position: initial;">{% trans 'Guest' %}</button>
+                        <a class="btn btn-flat" href="{% url 'core:guest' %}" formaction="#" style="position: initial;">{% trans 'Guest' %}</a>
                     </div>
                     <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6 text-center">
                         <button type="submite" class="btn btn-flat btn-success" form="form-login" style="position: initial;">{% trans 'Login' %}</button>
