--- a/courses/templates/category/create.html
+++ b/courses/templates/category/create.html
@@ -74,7 +74,7 @@
 						{% endif %}
 					{% endfor %}
 					<div class="row text-center">
-						<input type="submit" value="{% trans 'Save' %}" class="btn btn-sm btn-success" />
+						<button type="submit" class="btn btn-primary btn-raised">{% trans "Save" %}</button>
 					</div>
 				</form>
 			</div>
