--- a/courses/templates/category/index.html
+++ b/courses/templates/category/index.html
@@ -82,7 +82,8 @@
 							<td class="text-center">
 								<a href="{% url 'course:view_cat' category.slug %}" class="btn btn-info btn-sm"><span class="glyphicon glyphicon-eye-open"></span></a>
 								<a href="{% url 'course:update_cat' category.slug %}" class="btn btn-primary btn-sm"><span class="glyphicon glyphicon-edit"></span></a>
-								<a href="{% url 'course:delete_cat' category.slug %}" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-trash"></span></a>
+								<a href="javascript:modal.get('{% url 'course:delete_cat' category.slug %}','#category','#modal_category');" class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-trash"></span></a>
+
 							</td>
 						</tr>
 					{% endfor %}
@@ -96,4 +97,6 @@
 			</tbody>
 		</table>
 	</div>
+	<div class="row" id="modal_category">
+<script src="{% static 'js/modal_category.js' %}"></script>
 {% endblock %}
