--- a/courses/templates/course/index.html
+++ b/courses/templates/course/index.html
@@ -11,47 +11,35 @@
 {% endblock %}
 
 {% block sidebar %}
-<div class="panel panel-primary navigation">
-    <div class="panel-heading">
-        <h4>{% trans 'Menu' %}</h4>
-    </div>
-    <div class="panel-body">
-        <ul class="nav nav-pills nav-stacked">
-        	<li><a href="{% url 'core:home' %}">{% trans 'Home' %}</a></li>
-            <li><a href="{% url 'users:profile' %}">{% trans 'Profile' %}</a></li>
-            <li><a href="{% url 'course:manage' %}">{% trans 'My Courses' %}</a></li>
-        </ul>
-    </div>
-</div>
-
-{% if user|has_role:'professor' or user|has_role:'system_admin' %}
-
     <div class="panel panel-primary navigation">
-	    <div class="panel-heading">
-	        <h3 class="panel-title">Actions</h3>
-	    </div>
-	    <div class="panel-body">
-	        <ul class="nav nav-pills nav-stacked">
-	            <li><a href="javascript:void(0)">Replicate Course</a></li>
-	            <li><a href="{% url 'course:create' %}">Create Course</a></li>
-	        </ul>
-	    </div>
-	</div>
-
-	<div class="panel panel-primary navigation">
-	    <div class="panel-heading">
-	        <h3 class="panel-title">Category</h3>
-	    </div>
-	    <div class="panel-body">
-	        <ul class="nav nav-pills nav-stacked">
-	            <li><a href="{% url 'course:create_cat' %}">Create Category</a></li>
-	            <li><a href="{% url 'course:manage_cat' %}">List Category</a></li>
-	        </ul>
-	    </div>
-	</div>
-
-{% endif %}
-
+        <div class="panel-heading">
+            <h4>Menu</h4>
+        </div>
+        <div class="panel-body">
+            <ul class="nav nav-pills nav-stacked">
+                <li><a href="{% url 'app:index' %}">{% trans 'Home' %}</a></li>
+                <li><a href="{% url 'users:profile' %}">{% trans 'Profile' %}</a></li>
+                {% if user|has_role:'student' or not user.is_staff %}
+                    <li><a href="{% url 'course:manage' %}">{% trans 'My courses' %}</a></li>
+                {% endif %}
+                {% if user|has_role:'system_admin' %}
+                    <li> <a href="{% url 'users:manage' %}">{% trans 'Manage Users' %}</a></li>
+                {% endif %}
+                {% if user|has_role:'system_admin' or user|has_role:'professor' %}
+                    <li>
+                        <a href="#courses_list" class="accordion" data-toggle="collapse">{% trans 'Manage Courses' %}</a>
+                        <div id="courses_list" class="collapse">
+                            <ul class="nav nav-pill nav-stacked accordion_list">
+                            {% for course in courses_list %}
+                                <li><a href="{% url 'course:view' course.slug %}">{{ course }}</a></li>
+                            {% endfor %}
+                            </ul>
+                        </div>
+                    </li>
+                {% endif %}
+            </ul>
+        </div>
+    </div>
 {% endblock %}
 
 {% block content %}
