Removin file deleted after ajax call [#134]

--- a/files/templates/files/delete_file.html
+++ b/files/templates/files/delete_file.html
@@ -59,8 +59,8 @@
                 contentType: false,
                 success: function(data) {
                     $('#fileDeleteModal').modal('hide');
-                    $('#file_eidt_{{ file.slug }}').remove();
-                    $('#file_eidt_icon_{{ file.slug }}').remove();
+                    $('#file_edit_{{ file.slug }}').remove();
+                    $('#file_edit_icon_{{ file.slug }}').remove();
                 },
                 error: function(data){
                     // $('.erro-update').html(data.responseText);
