--- a/courses/templates/course/view.html
+++ b/courses/templates/course/view.html
@@ -28,7 +28,7 @@
         </div>
     </div>
 
-{% if user|has_role:'professor' or user|has_role:'system_admin' %}
+{% if user|has_role:'professor' and user in course.professors or user|has_role:'system_admin' %}
 
     <div class="panel panel-primary navigation">
     <div class="panel-heading">
@@ -56,7 +56,7 @@
           <div class="col-xs-8 col-md-10 titleTopic">
             <h4>{{course}}</h4>
           </div>
-          {% if user|has_role:'professor' or user|has_role:'system_admin' %}
+          {% if user|has_role:'professor' and user in course.professors or user|has_role:'system_admin' %}
             <div class="col-xs-4 col-md-2" id="divMoreActions">
               <div class="btn-group">
                 <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -199,17 +199,19 @@
                   <h4 style="color:white">{{subject.name}}</h4>
                   </a>
                 </div>
-                <div class="col-xs-3 col-md-2" id="divMoreActions">
-                  <div class="btn-group">
-                    <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="moreActions">
-                      <li><a href="javascript:void(0)" data-toggle="modal" data-target="#myModal3"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; Replicate</a></li>
-                      <li><a href="javascript:void(0)" data-toggle="modal" data-target="#removeSubject2"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp; Remove</a></li>
-                    </ul>
+                {% if user|has_role:'professor' and user in subject.professors or user|has_role:'system_admin' %}
+                  <div class="col-xs-3 col-md-2" id="divMoreActions">
+                    <div class="btn-group">
+                      <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
+                      </button>
+                      <ul class="dropdown-menu" aria-labelledby="moreActions">
+                        <li><a href="javascript:void(0)" data-toggle="modal" data-target="#myModal3"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; Replicate</a></li>
+                        <li><a href="javascript:void(0)" data-toggle="modal" data-target="#removeSubject2"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp; Remove</a></li>
+                      </ul>
+                    </div>
                   </div>
-                </div>
+                {% endif %}
             </div>
           </div>
           <div class="panel-body">
@@ -244,17 +246,19 @@
                   <h4 style="color:white">{{subject.name}}</h4>
                   </a>
                 </div>
-                <div class="col-xs-3 col-md-2" id="divMoreActions">
-                  <div class="btn-group">
-                    <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="moreActions">
-                      <li><a href="javascript:void(0)" data-toggle="modal" data-target="#myModal3"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; Replicate</a></li>
-                      <li><a href="javascript:void(0)" data-toggle="modal" data-target="#removeSubject2"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp; Remove</a></li>
-                    </ul>
+                {% if user|has_role:'professor' and user in subject.professors or user|has_role:'system_admin' %}
+                  <div class="col-xs-3 col-md-2" id="divMoreActions">
+                    <div class="btn-group">
+                      <button class="btn btn-default btn-sm dropdown-toggle" type="button" id="moreActions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fa fa-ellipsis-v fa-2x" aria-hidden="true"></i>
+                      </button>
+                      <ul class="dropdown-menu" aria-labelledby="moreActions">
+                        <li><a href="javascript:void(0)" data-toggle="modal" data-target="#myModal3"><i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; Replicate</a></li>
+                        <li><a href="javascript:void(0)" data-toggle="modal" data-target="#removeSubject2"><i class="fa fa-trash fa-fw" aria-hidden="true"></i>&nbsp; Remove</a></li>
+                      </ul>
+                    </div>
                   </div>
-                </div>
+                {% endif %}
             </div>
           </div>
           <div class="panel-body">
@@ -281,7 +285,7 @@
         {% endfor %}
   {% endif %}
 
-{% if  user|has_role:'professor' or user|has_role:'system_admin' %}
+{% if  user|has_role:'professor' and user in course.professors or user|has_role:'system_admin' %}
 
     <div class="form-group">
     <a href="{% url 'course:create_subject' course.slug %}" data-toggle="modal" data-target="" class="btn btn-primary btn-lg btn-block btn-raised">{% trans 'Create Subject' %}<div class="ripple-container"></div></a>
